<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="tvCategoria">Seleccionar Categoría</string>
    <string name="tvListaDeProd">Productos: </string>
    <string name="tvCantidadAPedir">Cantidad: </string>
    <string name="edtCantidadAPedir">0</string>
    <string name="btnProdAddPedido">Agregar</string>
    <string name="tvDatosPedido">Datos del pedido</string>
    <string name="tvEmail">Correo Electronico</string>
    <string name="edtEmail">Ingrese su email</string>
    <string name="tvModoEntrega">Seleccione su modo de entrega</string>
    <string name="rbLocal">Retira en local</string>
    <string name="rbDomicilio">Enviar a domicilio</string>
    <string name="tvDireccionEnvio">Direccion de envio</string>
    <string name="edtDireccion">Ingrese su direccion</string>
    <string name="tvHora">Hora solicitada hh:mm</string>
    <string name="edtHora">Ingrese la hora de su pedido</string>
    <string name="btnAgregarProducto">Agregar Producto</string>
    <string name="btnQuitarProducto">Quitar pedido</string>
    <string name="tvTotal">Total del pedido</string>
    <string name="btnHacerPedido">Hacer Pedido</string>
    <string name="btnVolver">Volver</string>
    <string name="tvPedidosRealizados">Pedidos realizados</string>
    <string name="btnHistorialNuevo">Nuevo</string>
    <string name="btnHistorialMenu">Menu</string>
    <string name="lblMailFilaPedido">Pedido realizado</string>
    <string name="lblContacto">Contacto:</string>
    <string name="lblFechaDelPedido">Fecha de entrega:</string>
    <string name="lblItems">Items del pedido:</string>
    <string name="lblPrecio">A pagar $:</string>
    <string name="lblEstado">Estado</string>
    <string name="lblCancelar">Cancelar</string>
    <string name="lblVerDetalle">Ver detalles</string>
    <string name="lblPrepararPedido">Preparar pedido</string>
    <string name="lblRetirarPorDefecto">Retirar por defecto</string>
    <string name="lblCorreoElectronico">Correo Electrónico</string>
    <string name="lblConfiguracion">Configuración</string>

    <!--- Un Strings activity_guardar_producto -->
    <string name="tbCrearProductoNuevo">CREAR PRODUCTO NUEVO</string>
    <string name="tbBuscar">ACTUALIZAR</string>
    <string name="lblBuscar">Buscar por id</string>
    <string name="btnBuscarProdcuto">BUSCAR POR ID...</string>
    <string name="lblDatosProducto">Datos del producto</string>
    <string name="lblProductoNombre">Nombre</string>
    <string name="lblProductoDescripcion">Descripción</string>
    <string name="lblProductoPrecio">Precio</string>
    <string name="lblProductoCategoria">Categoría</string>
    <string name="btnProductoGuarda">GUARDAR</string>
    <string name="btnProductoBorrar">BORRAR</string>
    <string name="btnProductoVolver">VOLVER</string>

    <!--- Botones de activity_main -->
    <string name="btnMainCrearActualizarProd"> Crear o actualizar producto</string>

</resources>