<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewPedidoRealizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMailFilaPedido" />

    <TextView
        android:id="@+id/textViewEmailPedido"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/lblContacto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewHoraDenetrega"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lblFechaDelPedido" />

        <ImageView
            android:id="@+id/imageViewTipoEntrega"
            android:layout_width="164dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCantidadItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblItems" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPrecio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewEestado"
            android:layout_width="368dp"
            android:layout_height="29dp"
            android:layout_weight="1"
            android:text="@string/lblEstado" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCancelar" />

    </LinearLayout>
</LinearLayout>
