<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductoLista">

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCategoria" />

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewListProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvListaDeProd" />

    <ListView
        android:id="@+id/listViewProducto"
        android:layout_width="match_parent"
        android:layout_height="144dp" />

    <TextView
        android:id="@+id/textViewCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCantidadAPedir" />

    <EditText
        android:id="@+id/editTextCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:focusable="auto"
        android:inputType="number"
        android:text="@string/edtCantidadAPedir" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btnProdAddPedido" />
</LinearLayout>