<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistorialPedidos">

    <TextView
        android:id="@+id/textViewPedidosRealizados"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/tvPedidosRealizados" />

    <ListView
        android:id="@+id/lvHistorialDePedidos"
        android:layout_width="match_parent"
        android:layout_height="416dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHistorialNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnHistorialNuevo" />

        <Button
            android:id="@+id/botonHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnHistorialMenu" />
    </LinearLayout>
</LinearLayout>